--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nestjs-telegraf": "^2.6.3",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "telegraf": "^4.11.2",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
